# leaf

./: .gitignore  404.html  CONTRIBUTING.md  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: black.yml
docs/: index.md  installation.md
installation/: index.html
leaf/: __init__.py  __main__.py  bot.py  config.toml
leaf/extensions/: image.py  moderation.py  tags.py
leaf/utils/: pagination.py
migrations/: 0000-tags.sql  0001-removable-tags.sql  0002-primary-update-tags.sql  0002-restorable-tags.sql  0003-alias-tags.sql  0003-moderation.sql  Tags.sql
search/: search_index.json
