[tool.poetry]
name = "leaf-bot"
version = "0.0.0"
description = "An advanced Discord bot written in Python."
authors = ["mudkipdev <mudkip@mudkip.dev>"]
license = "MIT"
repository = "https://github.com/mudkipdev/leaf"
readme = "README.md"
packages = [
    { include = "leaf" }
]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"
jishaku = "^2.5.1"
asyncpg = "^0.27.0"
pytz = "^2022.7.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.20.9"
cachetools = "^5.3.0"
python-logging-discord-handler = "^0.1.4"
logging = "^0.4.9.6"
rich = "^13.3.3"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"